tests/health/tests__fuzzer__lib__core__core.toit.gold
tests/fuzzer/lib/core/core.toit:3:9: error: Unresolved identifier: 'fail'
always: fail  // So that we don't need to worry if a test succeeds.
        ^~~~
